<resources>
    <string name="app_name">AquaFarm</string>
    <string name="logo">Logo</string>
    <string name="feeding">Feeding</string>
    <string name="aquafarm">AquaFarm</string>
    <string name="quantity">Quantity (in kgs)</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="date_and_time"><![CDATA[Date & Time]]></string>
    <string name="current_time">current time</string>
    <string name="login">LOGIN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="add_new">Add New</string>
    <string name="welcome">Welcome,</string>
    <string name="username">username</string>
    <string name="feed_stock">Feed Stock</string>
    <string name="add_site">Add Site</string>
    <string name="site_location">Site Location</string>
    <string name="start_date">Start Date</string>
    <string name="pond_no">Pond No.</string>
    <string name="feed_size">Feed Size</string>
    <string name="available_quantity_kg">Available Quantity(kg)</string>
    <string name="brand">Brand</string>
    <string name="feed_usage">Feed Usage</string>
    <string name="price">Price</string>
</resources>