<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".StockActivity">

    <TableLayout
        android:layout_width="370dp"
        android:layout_height="360dp"
        android:layout_marginTop="64dp"
        android:background="@color/medium"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/site_location">

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/brand"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/light"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/brand"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#F6F5F5" />

            <TextView
                android:id="@+id/feed_size"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/light"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/feed_size"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#F6F5F5" />

            <TextView
                android:id="@+id/avl_qty"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/light"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/available_quantity_kg"
                android:textColor="#F6F5F5" />
        </TableRow>

    </TableLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.AppCompat.NoActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5sp"
                android:fontFamily="sans-serif-black"
                android:gravity="center_vertical"
                android:text="@string/aquafarm"
                android:textColor="@color/cyan"
                android:textSize="24sp" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/feeding_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/feed_stock"
        android:textColor="@color/cyan"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Spinner
        android:id="@+id/site_location"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/spinner"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feeding_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>