<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".FeedingActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.AppCompat.NoActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5sp"
                android:fontFamily="sans-serif-black"
                android:gravity="center_vertical"
                android:text="@string/aquafarm"
                android:textColor="@color/cyan"
                android:textSize="24sp" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/feeding_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/feeding"
        android:textColor="@color/cyan"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Spinner
        android:id="@+id/site_location"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/spinner"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feeding_text_view" />

    <Spinner
        android:id="@+id/pond_no"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/spinner"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/site_location" />

    <EditText
        android:id="@+id/date_time"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_round_borders"
        android:ems="10"
        android:hint="@string/date_and_time"
        android:inputType="datetime"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.336"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pond_no"
        android:importantForAutofill="no" />

    <Spinner
        android:id="@+id/feed_size"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/spinner"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_time" />

    <EditText
        android:id="@+id/feed_qty"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_round_borders"
        android:ems="10"
        android:hint="@string/quantity"
        android:inputType="numberDecimal"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_size"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/clear"
        android:textColor="@color/cyan"
        app:backgroundTint="@color/light"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_qty" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:shadowColor="#FFFFFF"
        android:text="@string/save"
        android:textColor="@color/cyan"
        app:backgroundTint="@color/light"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_qty" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/date_time_picker"
        android:contentDescription="@string/current_time"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/date_time"
        app:layout_constraintTop_toBottomOf="@+id/pond_no"
        app:srcCompat="@drawable/ic_calendar" />

</androidx.constraintlayout.widget.ConstraintLayout>